<resources>
    <string name="app_name">Librery</string>
    <string name="tab_text_0">Have read</string>
    <string name="tab_text_1">To read</string>
    <string name="action_settings">Backup and restore</string>
    <string name="book_title">Title: </string>
    <string name="book_author">Author: </string>
    <string name="search">Advanced search</string>
    <string name="share">Recommend this book to a friend...</string>
    <string name="hint_isbn">ISBN</string>
    <string name="cover_desc">Cover image</string>

    <!--buttons-->
    <string name="search_butt">Search</string>
    <string name="post_butt">Recommend</string>
    <string name="save_button">Save to local db</string>
    <string name="del_button">Remove from local db</string>
    <string name="pub_button">Share</string>
    <string name="sh_button">Share</string>

    <!--toasts-->
    <string name="fill_fields_toast">Please fill in at least one of the fields!</string>
    <string name="query_failure">Couldn\'t fetch any data.</string>
    <string name="not_connected">Please check your network connection.</string>
    <string name="no_matching_data">No matching data.</string>
    <string name="not_in_db">This book is not in the local database.</string>
    <string name="deleted">This book was removed from your local databases.</string>
    <string name="added">Your changes have been saved.</string>
    <string name="post_failure">Sorry, something\'s wrong.</string>
    <string name="posted">Posted successfully!</string>
    <string name="unavailable">This functionality is not available yet.</string>

    <!--hints-->
    <string name="hint_title">Title</string>
    <string name="hint_author">Author</string>
    <string name="hint_publisher">Publisher</string>
    <string name="notes_hint">Review or notes</string>
    <string name="comment_hint">Share your thoughts</string>

    <!--activity labels-->
    <string name="search_label">Search</string>
    <string name="search_res_label">Search results</string>
    <string name="book_details_label">Book details</string>
    <string name="share_label">Share</string>
    <string name="rec_label">Recommended books</string>

    <!--message-->
    <string name="message1">I recommend you to read </string>
    <string name="message2"> by </string>
    <string name="message3"> because </string>

    <!--dialogs-->
    <string name="safe_del_title">Removing book</string>
    <string name="safe_del_question">Are you sure you want to remove this item?</string>
    <string name="safe_upd_title">Updating book data</string>
    <string name="safe_upd_question">This book is already in you local database. Are you sure you want to update it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
