<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewBookDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/book_cover"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/cover_desc" /> <!--TODO: remove-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/book_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Un libro qualunque" />    <!--TODO: remove-->

                <TextView
                    android:id="@+id/book_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Barbabulba" />  <!--TODO: remove-->

                <TextView
                    android:id="@+id/book_publisher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Edizioni Qualsiasi" />  <!--TODO: remove-->

                <TextView
                    android:id="@+id/book_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2048" />  <!--TODO: remove-->

            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/read_chbox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_button" />

            <Button
                android:id="@+id/pub_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pub_button" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>